# insmalloc

./: .gitignore  CMakeLists.txt  package-lock.json  package.json  todo.md
lib/: CMakeLists.txt  CmakeLists.txt
lib/allocator/: CMakeLists.txt
lib/allocator/src/: base.cpp  system-object.cpp
lib/allocator/src/allocators/Buddy/: BuddyAllocator.cpp  heapLocal.h  heapLocal_plain_object.h  index.h
lib/allocator/src/allocators/LargeObject/: LargeObjectAllocator.cpp  index.h
lib/allocator/src/allocators/Slabbing/: SlabbingAllocator.cpp  index.h
lib/allocator/src/allocators/ThreadedPageClass/: alloc-atomic.h  alloc-internal.h  alloc-types.h  alloc.cpp  alloc.h  heap.cpp  init.cpp  options.cpp  page-queue.h  page.cpp  segment.cpp
lib/allocator/src/allocators/ZonedBuddy/: Global.h  Local.h  Local_objects.h  Local_sub_objects.h  Local_zoned_objects.h  ZonedBuddyAllocator.cpp  index.h  utils.h
lib/allocator/src/heaps/: heaps.cpp  heaps.h
lib/allocator/src/heaps/Compact/: heap-compact.cpp  heapCompact.cpp
lib/allocator/src/heaps/System/: heap-system.cpp
lib/allocator/src/win32/: patch_functions.cc
lib/allocator/test/: CMakeLists.txt  main.cpp  test_meta_alloc.cpp  test_perf_alloc.cpp  test_perf_alloc.h  test_segment_alloc.cpp  utils.cpp  utils.h
lib/include/sat/memory/: context.h  descriptors.h  gc.h  region.h
lib/ins.memory.heap/: CmakeLists.txt
lib/ins.memory.heap/docs/: sizes.xlsx
lib/ins.memory.heap/include/ins/: timing.h
lib/ins.memory.heap/include/ins/memory/: analysis.h  config.h  contexts.h  controller.h  malloc.h  objects-base.h  objects-pool.h  objects-refs.h  schemas.h  space.h
lib/ins.memory.heap/src/: timing.cpp
lib/ins.memory.heap/src/memory/: analysis.cpp  config.cpp  contexts.cpp  controller.cpp  malloc.cpp  objects-base.cpp  objects-pool.cpp  objects-refs.cpp  schemas.cpp  space.cpp
lib/ins.memory.hooks/: CmakeLists.txt
lib/ins.memory.hooks/include/ins/: hooks.h
lib/ins.memory.hooks/src/win32/: HookFunctionManifold.cpp  HookFunctionManifold.h  PatchMemoryFunctions.cpp
lib/ins.memory.space/: CmakeLists.txt
lib/ins.memory.space/docs/: objects_mgmt.md
lib/ins.memory.space/include/ins/: macros.h  timing.h
lib/ins.memory.space/include/ins/binary/: alignment.h  bitmap64.h  bitwise.h
lib/ins.memory.space/include/ins/memory/: config.h  configuration.h  context.h  contexts.h  controller.h  descriptors.h  file-view.h  gc.h  heap.h  map.h  objects-base.h  objects-config.h  objects-context.h  objects-large.h  objects-pool.h  objects.h  (+8 more)
lib/ins.memory.space/sizes/: common.js  generate-cpp-A.js  generate-cpp-B.js  size-classes.xlsx
lib/ins.memory.space/src/: timing.cpp
lib/ins.memory.space/src/binary/: bitmap64.cpp
lib/ins.memory.space/src/memory/: blocks.cpp  blocks.h  config.cpp  configuration.cpp  context.cpp  contexts.cpp  controller.cpp  descriptors-allocator.h  descriptors.cpp  file-view.cpp  gc.cpp  heap.cpp  map.cpp  objects-base.cpp  objects-config.cpp  objects-context.cpp  objects-large.cpp  objects-pool.cpp  objects-refs.cpp  objects-region.cpp  objects-slabbed.cpp  objects.cpp  region.cpp  regions-allocator.h  regions.cpp  schemas.cpp  space.cpp  structs.cpp
lib/ins.memory.space/src/os/: os-win32.cpp
lib/ins.memory.space2/: CmakeLists.txt
lib/ins.memory.space2/docs/: index.md  sizes.xlsx
lib/ins.memory.space2/src/binary/: bitmap64.cpp
lib/ins.memory.space2/src/memory/: descriptors.cpp  descriptors.h  objects.cpp  objects.h  space.cpp  structs.h
lib/ins.memory.space2/src/os/: memory.h
lib/memory/: CMakeLists.txt
lib/memory/src/: base.cpp  btree.h  memory-buffers64.cpp  memory-buffers64.hpp  segments-allocator.cpp  segments-allocator.hpp
lib/memory/src/win32/: system.cpp  system.h
lib/memory/test/: CMakeLists.txt  main.cpp
lib/sat.allocator/: CMakeLists.txt
lib/sat.allocator/include/sat/: allocator.h  objects_types.h
lib/sat.allocator/src/: base.cpp  base.h  controller.cpp  controller.h
lib/sat.allocator/src/heaps/: AllocatorSizeMapping.h  heaps.cpp  heaps.h
lib/sat.allocator/src/types/: Types_database.cpp
lib/sat.allocator/src/win32/: patch_functions.cc
lib/sat.allocator/test/: main.cpp  test_meta_alloc.cpp  test_perf_alloc.cpp  test_perf_alloc.h  test_types_alloc.cpp
lib/sat.memory/: CMakeLists.txt
lib/sat.memory.hooks/: CmakeLists.txt
lib/sat.memory.hooks/include/sat/: hooks.h
lib/sat.memory.hooks/src/win32/: HookFunctionManifold.cpp  HookFunctionManifold.h  PatchMemoryFunctions.cpp
lib/sat.memory.space/: CmakeLists.txt
lib/sat.memory.space/sizes/: generate-cpp-B.js  size-classes-B.csv
lib/sat.memory.space/src/binary/: bitmap64.cpp
lib/sat.memory.space/src/memory/: blocks.cpp  blocks.h  configuration.cpp  context.cpp  gc.cpp  region.cpp
lib/sat.memory/include/sat/: memory.hpp  objects_infos.h  system-object.hpp  table.hpp
lib/sat.memory/src/: base.cpp  memory-buffers64.cpp  segments-allocator.cpp  segments-allocator.hpp
lib/sat.memory/test/: CMakeLists.txt  main.cpp
lib/sat.stack-analysis/: CMakeLists.txt
lib/sat.stack-analysis/include/sat/: stack_analysis.h
lib/sat.stack-analysis/src/: base.cpp  stack-profiler.cpp  stack-profiler.h  stack-stamp.h  thread-stack-tracker.h
lib/sat.stack-analysis/src/win32/: system.cpp
lib/sat.stack-analysis/test/: test_stack_analysis.cpp
lib/sat.threads/: CMakeLists.txt
lib/sat.threads/include/sat/: thread.hpp  worker.hpp
lib/sat.threads/src/: spinlock.cpp  threads.hpp
lib/sat.threads/src/worker/: index.hpp
lib/shared/: CMakeLists.txt
lib/sizes/: generate-cpp-A.js  size-classes-A.csv
lib/src/memory/: blocks.cpp  context.cpp  space.cpp
lib/src/win32/: os.cpp  os.h
lib/stack-analysis/: CMakeLists.txt
lib/stack-analysis/src/: base.cpp  scheduler.h  stack-profiler.cpp  stack-profiler.h  stack-stamp.cpp  stack-stamp.h  thread-stack-tracker.h
lib/stack-analysis/test/: CMakeLists.txt  test_stack_analysis.cpp
lib/threads/: CMakeLists.txt
lib/threads/src/: spinlock.cpp  threads.hpp  timing.cpp
lib/threads/src/worker/: index.hpp
lib/threads/test/: CMakeLists.txt  main.cpp
tools/mimalloc/: CMakeLists.txt
(+73 files in other folders)
